--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,12 @@
             <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
+        <!-- http://mvnrepository.com/artifact/com.microsoft.sqlsever/mssql-jdbc -->
+        <dependency>
+            <groupId>com.microsoft.sqlserver</groupId>
+            <artifactId>mssql-jdbc</artifactId>
+            <version>8.4.1.jre8</version>
+        </dependency>
     </dependencies>
 
     <build>
