HW-week 11- commit

--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,13 @@
             <artifactId>mssql-jdbc</artifactId>
             <version>8.4.1.jre8</version>
         </dependency>
+        <!-- http://mvnrepository.com/artifact/javax.servlet/jstl -->
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>jstl</artifactId>
+            <version>1.2</version>
+        </dependency>
+
     </dependencies>
 
     <build>
